2006-03-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.26 "endive" is released.

2006-03-31  Marcus Crestani  <marcus.crestani@ub.uni-tuebingen.de>

	* diagnose.el (show-mc-alloc-memory-usage): Rename buffer to
	"mc-alloc memory usage" to avoid name clash with
	show-memory-usage.

2006-03-26  Marcus Crestani  <crestani@xemacs.org>

	* diagnose.el (show-gc-stats): Adjust format string, remove
	explicitly-freed statistics (the need to explicitly free went away
	with the asynchronous finalization patch).

2006-03-20  Malcolm Purvis  <malcolmp@xemacs.org>

	* next-error.el: Rename functions that clash with the next-error
	family in compile.el
	* occur.el (occur-next-error): Use new names
	* occur.el (multi-occur): Fix compiler warnings.

2006-03-15  Jerry James  <james@xemacs.org>

	* newcomment.el (uncomment-region): Remove old code that breaks
	uncomment-region on C files.  Thanks to Christian Podlasly for the
	report.

2006-03-15  Jerry James  <james@xemacs.org>

	* register.el (describe-register-1): Use set-text-properties
	instead of the nonexistent remove-list-of-text-properties.

2006-03-14  Jerry James  <james@xemacs.org>

	* wid-edit.el (widget-move-and-invoke): New function, used by Gnus.

2006-02-26  Vin Shelton  <acs@xemacs.org>

	* setup-paths.el (paths-emacs-data-root-p): Add search for package
	root.
	(paths-find-invocation-roots): Add root-p parameter to test
	plausibility of the roots.

2006-03-12  Marcus Crestani  <crestani@xemacs.org>

	* diagnose.el (show-memory-usage): Fix regexp.

2006-02-26  Mike Sperber  <mike@xemacs.org>

	* lisp-mode.el (lisp-send-defun): Remove this function; the
	definition here didn't do anything---once upon a time, it may have
	gotten overwritten by some code that has evaporated since then.

2006-02-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.25 "eggplant" is released.

2006-02-05  Aidan Kehoe  <kehoea@parhasard.net>

	* easymenu.el: Update copyright. 
	* easymenu.el (easy-menu-all-popups):